# poc-mcp-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTH_IDEAS.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  poc-mcp-gateway.slnx  pyproject.toml
gateway/: config.yaml  petstore-openapi.json  shipment-data-api.json
idp/: IdentityServer.slnx
idp/IdentityServer/: .dockerignore  Config.cs  CustomDynamicClientRegistrationRequestProcessor.cs  DcrCleanupService.cs  Dockerfile  HostingExtensions.cs  IdentityServer.csproj  Program.cs  SeedData.cs  TestUsers.cs  appsettings.json
idp/IdentityServer/Migrations/ConfigurationDb/: 20260209105527_InitialConfiguration.Designer.cs  20260209105527_InitialConfiguration.cs  ConfigurationDbContextModelSnapshot.cs
idp/IdentityServer/Migrations/PersistedGrantDb/: 20260209105539_InitialPersistedGrant.Designer.cs  20260209105539_InitialPersistedGrant.cs  PersistedGrantDbContextModelSnapshot.cs
idp/IdentityServer/Pages/: Extensions.cs  IdentityServerSuppressions.cs  Index.cshtml  Index.cshtml.cs  Log.cs  SecurityHeadersAttribute.cs  Telemetry.cs
idp/IdentityServer/Pages/Account/: AccessDenied.cshtml  AccessDenied.cshtml.cs
idp/IdentityServer/Pages/Account/Create/: Index.cshtml  Index.cshtml.cs  InputModel.cs
idp/IdentityServer/Pages/Account/Login/: Index.cshtml  Index.cshtml.cs  InputModel.cs  LoginOptions.cs  ViewModel.cs
idp/IdentityServer/Pages/Account/Logout/: Index.cshtml  Index.cshtml.cs  LoggedOut.cshtml  LoggedOut.cshtml.cs  LoggedOutViewModel.cs  LogoutOptions.cs
idp/IdentityServer/Pages/Ciba/: All.cshtml  All.cshtml.cs  Consent.cshtml  Consent.cshtml.cs  ConsentOptions.cs  Index.cshtml  Index.cshtml.cs  InputModel.cs  ViewModel.cs  _ScopeListItem.cshtml
idp/IdentityServer/Pages/ClientApproval/: Index.cshtml  Index.cshtml.cs  ViewModel.cs
idp/IdentityServer/Pages/Clients/: Index.cshtml  Index.cshtml.cs  ViewModel.cs  _ClientCard.cshtml
idp/IdentityServer/Pages/Consent/: ConsentOptions.cs  Index.cshtml  Index.cshtml.cs  InputModel.cs  ViewModel.cs  _ScopeListItem.cshtml
idp/IdentityServer/Pages/Device/: DeviceOptions.cs  Index.cshtml  Index.cshtml.cs  InputModel.cs  Success.cshtml  Success.cshtml.cs  ViewModel.cs  _ScopeListItem.cshtml
idp/IdentityServer/Pages/Diagnostics/: Index.cshtml  Index.cshtml.cs  ViewModel.cs
idp/IdentityServer/Pages/ExternalLogin/: Callback.cshtml  Callback.cshtml.cs  Challenge.cshtml  Challenge.cshtml.cs
idp/IdentityServer/Pages/Grants/: Index.cshtml  Index.cshtml.cs  ViewModel.cs
idp/IdentityServer/Pages/Home/Error/: Index.cshtml  Index.cshtml.cs  ViewModel.cs
idp/IdentityServer/Pages/Redirect/: Index.cshtml  Index.cshtml.cs
idp/IdentityServer/Pages/ServerSideSessions/: Index.cshtml  Index.cshtml.cs
idp/IdentityServer/Pages/Shared/: _Layout.cshtml  _Nav.cshtml  _ValidationSummary.cshtml
mcp-servers/filesystem/: Dockerfile  requirements.txt  server.py
mcp-servers/inspector/: Dockerfile  InspectorMcp.csproj  Program.cs  RequestSnapshot.cs
mcp-servers/inspector/Tools/: InspectorTool.cs
mcp-servers/jsonplaceholder/: Dockerfile  requirements.txt  server.py
mcp-servers/token-refresh/: Dockerfile  refresh.sh
mcp-servers/weather/: Dockerfile  requirements.txt  server.py
nginx/: nginx.conf
nginx/certs/: .gitignore
nginx/snippets/: cors-headers.conf  cors-preflight.conf  hide-cors-headers.conf  no-cache.conf  proxy-headers.conf  sse-support.conf  ssl.conf
scripts/: get-shipment-token.sh  setup-dev.sh  start-demo.sh  stop-demo.sh  wait-for-healthy.sh
specs/: SPECIFICATION.md
x-production-hardening/: dynamic_client_registration_validator.md
