[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gateway-demo"
version = "1.0.0"
description = "MCP Gateway Demo with FastMCP servers showcasing IBM Context Forge"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
authors = [{ name = "Demo Author" }]
keywords = ["mcp", "gateway", "fastmcp", "context-forge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.14.0,<3.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/validide/poc-mcp-gateway"
Documentation = "https://ibm.github.io/mcp-context-forge/"
Repository = "https://github.com/validide/poc-mcp-gateway"

[tool.hatch.build.targets.wheel]
packages = ["mcp-servers"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "S101",   # assert used (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"mcp-servers/*" = ["N999"]  # Ignore invalid module name for standalone scripts

[tool.ruff.lint.isort]
known-first-party = ["mcp_servers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
strict = true
scripts_are_modules = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["fastmcp.*", "httpx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["server"]
disallow_untyped_decorators = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
